# rust-divisor-sequence

./: .gitignore  CLAUDE.md  Cargo.toml  NOTES.md  PERFORMANCE_PLAN.md  PERFORMANCE_ROADMAP.md  README.md  ROADMAP.md  VIDEO_ESSAY_PLAN.md  gaps.csv  human_notes.md  results.csv  results_500.csv  results_new.csv  results_new_2.csv  results_new_3.csv  results_new_4.csv  summary.md  test_lockin.csv
.cargo/: config.toml
.claude/: settings.local.json
analysis/: _build_explore_nb.py  attractors.csv  build_attractors.py  build_bfiles.py  build_fixed_points.py  build_random_seed_basin.py  build_sustained_ceiling.py  composite_fp_probe_raw.csv  cycle_value_tau_structure.csv  cycle_value_tau_structure.py  explore.ipynb  fixed_points.csv  fixed_points.md  fixed_points_full.csv  improve_basin_resolution.py  length_2mp1_K_structure.csv  length_mp1_K_features.csv  length_mp1_admissibility.csv  length_mp1_bar_tau.csv  length_mp1_basin_Ks.csv  length_mp2_K_structure.csv  mlnm_bound.csv  mlnm_bound.md  quantify_mlnm_bound.py  sustained_ceiling.csv  value_set_clusters.csv
analysis/cycle_signatures/: 1.csv  10.csv  100.csv  1000.csv  1001.csv  1002.csv  1003.csv  1004.csv  1005.csv  1006.csv  1007.csv  1008.csv  1009.csv  101.csv  1010.csv  1011.csv  1012.csv  1013.csv  1014.csv  1015.csv  1016.csv  1017.csv  1018.csv  1019.csv  102.csv  1020.csv  1021.csv  1022.csv  1023.csv  1024.csv  1025.csv  1026.csv  1027.csv  1028.csv  1029.csv  103.csv  1030.csv  1031.csv  1032.csv  (+1591 more)
benches/: r.rs
manim/: README.md  manim.cfg  requirements.txt
src/: lib.rs  main.rs
tests/: reference.rs
(+14 files in other folders)
