[package]
name = "divisor_series"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "r"
harness = false